Attempts to run shell commands with redirects and pipes.